ProdIND/ProdPrograms/force-app/main/default/objects/System_Configuration__c/System_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used to store system configurations</description>
    <label>System Configuration</label>
</CustomObject>