ProdIND/ProdPrograms/force-app/main/default/objects/System_Configuration__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>Date of application</description>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>