ProdIND/ProdPrograms/force-app/main/default/objects/System_Configuration__c/fields/Application_Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>Application_Sequence_No__c</fullName>
    <defaultValue>00000</defaultValue>
    <description>For Apllication no.</description>
    <label>Application Sequence No</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>