ProdIND/ProdPrograms/force-app/main/default/objects/System_Configuration__c/fields/Eligible_Roles_for_CS_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Roles_for_CS_Assignment__c</fullName>
    <label>Eligible Roles for CS Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>