ProdIND/ProdPrograms/force-app/main/default/objects/System_Configuration__c/fields/Lead_Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sequence_No__c</fullName>
    <label>Lead Sequence No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>