ProdIND/ProdPrograms/force-app/main/default/objects/System_Configuration__c/fields/Valid_Lead_Number_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_Lead_Number_Date__c</fullName>
    <label>Valid Lead Number Date</label>
    <type>Date</type>
</CustomField>